[gd_scene load_steps=8 format=3 uid="uid://cfnxl27e78ijy"]

[ext_resource type="Theme" path="res://menus/menu_theme.tres" id="1_met07"]
[ext_resource type="Script" path="res://menus/finish_scene.gd" id="2_y80ij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7838u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wa0fy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qy627"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfcnt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vvlap"]

[node name="finish_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_met07")
script = ExtResource("2_y80ij")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.839216, 0.384314, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 18.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Great Job Destroying The Midwest!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="play_again" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_7838u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wa0fy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qy627")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yfcnt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vvlap")
text = "Play Again"

[node name="main_menu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_7838u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wa0fy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qy627")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yfcnt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vvlap")
text = "Main Menu"

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_7838u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wa0fy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qy627")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yfcnt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vvlap")
text = "Quit
"

[node name="highest" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -57.0
offset_right = 305.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 36
text = "Highest Power: "

[node name="power" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 210.0
offset_bottom = -345.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 36
text = "Your Power:"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
